- improved User Agents configuration;
- added support for managing multiple proxy configurations and setting them per page or host;
- improved styling under Windows, Unity and macOS;
- added new default icon theme by Kamil Nęcek;
- replaced SSL warning dialogs by special error pages and console messages;
- added module for listing opened windows and tabs;
- improved error pages;
- added support for customizing F12 menu;
- implemented "Validate Using" menu;
- added support for configurable Fast Forward;
- lots of various fixes.

0.9.12 (2017-01-01):
- greatly improved tab bar:
-- allow to detach tabs by dragging them away;
-- allow to drop URLs and tabs from other windows;
-- added option to show embedded tab thumbnails;
-- improved handling of visibility of close button;
-- tabs demanding attention are drawn using bold font;
-- improved RTL support;
-- decreased default tab padding;
-- tab text is no longer centered horizontally;
-- fixed status tip messages while rearranging tabs;
- improved KDE5 and Unity integration:
-- added support for progress information;
-- added support for desktop actions;
- several macOS specific fixes and improvements:
-- improved rendering of platform style;
-- added dock icon menu;
-- added support for listing applications associated with given MIME type;
- added support for Windows jump list;
- added fullscreen support for QtWebKit backend;
- open file path is saved;
- improved RTL support in address and search fields;
- many other fixes and improvements.

0.9.11 (2016-10-01):
- added initial support for storing passwords:
-- support for multiple credential sets per host;
-- basic passwords management;
-- disabled by default (no encryption yet);
- added crash reporter;
- added support for muting tab media;
- F12 menu now exposes all modes for Images visibility (including new option to show cached images only) and Plugins;
- QtWebEngine backend is now capable of saving pages in MIME HTML format and as complete set of files;