@@ -11,6 +11,7 @@
 - added new default icon theme by Kamil Nęcek;
 - replaced SSL warning dialogs by special error pages and console messages;
 - added module for listing opened windows and tabs;
+- added ability to drop URLs onto bookmark bars;
 - improved error pages;
 - added support for customizing F12 menu;
 - implemented "Validate Using" menu;
